# MIDAS

./: .gitignore  Dockerfile.tools  Dockerfile.training  IMPLEMENTATION.md  Makefile  README.md  RUNBOOK_FIX_TS_KLINES.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.training.yml  docker-compose.yml  docker-entrypoint-training.sh  fix-permissions.sh  rebuild-collector.sh
collector/: Cargo.toml  Dockerfile
collector/src/: main.rs
docs/: NORMALIZATION.md  VAST_REMOTE_TRAINING.md
features/: Dockerfile  requirements.txt
features/features/: __init__.py  compute.py  compute_v2.py  config.py  feature_schema.py  kline.py  main.py  normalize.py  ts_utils.py  writer.py
grafana/dashboards/: dashboard.yml
processor/: Dockerfile  requirements.txt
processor/processor/: __init__.py  cleaner.py  config.py  main.py  orderbook.py  orderbook_v2.py  reader.py  validation.py  (+1 more)
prometheus/: prometheus.yml
reports/: feature_validation_template.json
scripts/: dataset_summary.py  diagnose_model.py  fix_and_verify.sh  fix_normalization.py  generate_klines_from_trades.py  inspect_data.py  inspect_features.py  inspect_parquet.py  normalize_and_validate.sh  normalize_existing_features.py  preflight.sh  setup.ps1  setup.sh  test_threshold.py  train_and_backtest.sh  validate_data.py  validate_features.py  validate_schema.py  validate_training_data.py  verify_pipeline.sh  visualize.py
tests/: conftest.py  test_feature_presence.py  test_kline_from_trades.py  test_ts_unit_detection.py
training/: __init__.py  backtest.py  dataset.py  model.py  train.py
(+12 files in other folders)
