[package]
name = "midas-collector"
version = "0.1.0"
edition = "2021"
authors = ["MIDAS Team"]
description = "High-performance Binance WebSocket data collector"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"
flate2 = "1.0"
bytesize = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
